[gd_scene load_steps=2 format=3 uid="uid://dmrfvv0acw2fj"]

[ext_resource type="Script" path="res://ui/feature_box/feature_box.gd" id="1_d41lh"]

[node name="FeatureBox" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d41lh")

[node name="CheckBox" type="CheckBox" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="InfoLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2

[connection signal="toggled" from="CheckBox" to="." method="_on_check_box_toggled"]
